tests/miniJava/neg/000061_mutation.MiniJava
class java { false public static void Main ( String [ ] java ) { { } } }
